# AIAssistentsobjectAnalitick

./: .env  .env.example  .gitignore  AGENT.md  PLAN.md  README.md  docker-compose.yml  package.json  pyproject.toml
apps/ops/: __init__.py  db_metrics_exporter.py
apps/ui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo
configs/: api_top.yaml  ranking.yaml  regions.yaml  sources.yaml  taxonomy.yaml
configs/prompts/: relevance_check.md  summarization.md  topic_labeling.md
deploy/docker/: .env.production.example  api.Dockerfile  compose.production.yml  python-worker.Dockerfile  ui.Dockerfile
docs/architecture/: 2026-04-04-raw-to-ml-bridge.md
docs/decisions/: 2026-04-04-cluster-description-service.md
parser_project/: .env  .env.example  Dockerfile  apply_schema.py  backup_database.py  bootstrap_production.py  check_pipeline.py  check_saved_rows.py  collect_max_messages.py  collect_portal_appeals.py  collect_rss.py  collect_vk_posts.py  config.py  consumed_documents.jsonl  consumer.py  create_topic.py  db.py  dedup_legacy.py  dlq_consumer.py  docker-compose.yml  documents.jsonl  id_builders.py  kafka_producer.py  ml_consumer.py  preprocessing_consumer.py  preprocessing_pipeline.py  prompt.txt  raw_to_ml_bridge.py  region_extractor.py  replay_raw_messages.py  requirements.txt  schema.py  source_registry.py  test_db_connection.py  test_document.py  test_vk_normalizer.py  vk_client.py
scripts/: rehome_legacy_layout.sh  verify_structure.sh
src/: App.tsx
tests/: helpers.py
(+233 files in other folders)
