[project]
name = "regional-analytics-assistant"
version = "0.1.0"
description = "Monorepo skeleton for regional analytics platform"
requires-python = ">=3.11"
dependencies = [
    "emoji>=2.12.0",
    "fast-langdetect>=1.0.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.9.0",
    "PyJWT[crypto]>=2.10.0",
    "PyYAML>=6.0.0",
    "python-dotenv>=1.0.0",
    "redis>=5.0.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
clustering = [
    "aiokafka>=0.10.0",
    "hdbscan>=0.8.33",
    "numpy>=1.26.0",
    "psycopg[binary]>=3.2.0",
    "scikit-learn>=1.5.0",
]
embeddings = [
    "aiokafka>=0.10.0",
    "psycopg[binary]>=3.2.0",
    "redis>=5.0.0",
    "torch>=2.3.0",
    "transformers>=4.41.0",
]
summarization = [
    "aiokafka>=0.10.0",
    "psycopg[binary]>=3.2.0",
]
ranking = [
    "aiokafka>=0.10.0",
    "psycopg[binary]>=3.2.0",
]
dev = [
    "pytest>=9.0.0",
]
